# PDS_CollaborativeTextEditor_2020

./: .gitignore  CMakeLists.txt  README.md  filetypes.xml  github.xml  ide.general.xml  main.cpp  updates.xml
colors/: _@user_Darcula.icls  _@user_Material Oceanic.icls
lib/server/: character.cpp  character.h  crdt.cpp  crdt.h  file.cpp  file.h  main.cpp  main.h  message.cpp  message.h  network_manager.cpp  network_manager.h  user.cpp  user.h
